@@ -566,55 +566,6 @@ class TestDecorators(TestCase):
         self.assertEqual(['lw', 'ul'], branch._calls)
 
 
-class TestBranchTransaction(TestCaseWithBranch):
-
-    def setUp(self):
-        super(TestBranchTransaction, self).setUp()
-        self.branch = None
-        
-    def test_default_get_transaction(self):
-        """branch.get_transaction on a new branch should give a PassThrough."""
-        self.failUnless(isinstance(self.get_branch().get_transaction(),
-                                   transactions.PassThroughTransaction))
-
-    def test__set_new_transaction(self):
-        self.get_branch()._set_transaction(transactions.ReadOnlyTransaction())
-
-    def test__set_over_existing_transaction_raises(self):
-        self.get_branch()._set_transaction(transactions.ReadOnlyTransaction())
-        self.assertRaises(errors.LockError,
-                          self.get_branch()._set_transaction,
-                          transactions.ReadOnlyTransaction())
-
-    def test_finish_no_transaction_raises(self):
-        self.assertRaises(errors.LockError, self.get_branch()._finish_transaction)
-
-    def test_finish_readonly_transaction_works(self):
-        self.get_branch()._set_transaction(transactions.ReadOnlyTransaction())
-        self.get_branch()._finish_transaction()
-        self.assertEqual(None, self.get_branch().control_files._transaction)
-
-    def test_unlock_calls_finish(self):
-        self.get_branch().lock_read()
-        transaction = InstrumentedTransaction()
-        self.get_branch().control_files._transaction = transaction
-        self.get_branch().unlock()
-        self.assertEqual(['finish'], transaction.calls)
-
-    def test_lock_read_acquires_ro_transaction(self):
-        self.get_branch().lock_read()
-        self.failUnless(isinstance(self.get_branch().get_transaction(),
-                                   transactions.ReadOnlyTransaction))
-        self.get_branch().unlock()
-        
-    def test_lock_write_acquires_write_transaction(self):
-        self.get_branch().lock_write()
-        # cannot use get_transaction as its magic
-        self.failUnless(isinstance(self.get_branch().control_files._transaction,
-                                   transactions.WriteTransaction))
-        self.get_branch().unlock()
-
-
 class TestRevisionHistoryCaching(TestCaseWithBranch):
     """Tests for the caching of branch revision_history.
 
